--- a/boxes.cabal
+++ b/boxes.cabal
@@ -29,7 +29,9 @@ library
   build-depends:
       base >= 4.7 && < 5
     , lens
+    , semigroupoids
   exposed-modules:
+      April
       Lib
   other-modules:
       Paths_boxes
@@ -43,6 +45,7 @@ executable boxes-exe
   build-depends:
       base >= 4.7 && < 5
     , lens
+    , semigroupoids
     , boxes
   default-language: Haskell2010
 
@@ -55,5 +58,6 @@ test-suite boxes-test
   build-depends:
       base >= 4.7 && < 5
     , lens
+    , semigroupoids
     , boxes
   default-language: Haskell2010
